--- a/src/app/rejection-reason/add-edit-rejection-reason/add-edit-rejection-reason.component.html
+++ b/src/app/rejection-reason/add-edit-rejection-reason/add-edit-rejection-reason.component.html
@@ -1,9 +1,8 @@
 <div class="container-fluid mt-3">
     <form [formGroup]="rejectReasonForm">
       <div class="p-2">
-        <h1>{{this.data.Action}} REJECT-REASON </h1><hr>
+        <h1>{{this.data.Action}} Reject-Reason </h1><hr>
     </div>
-
     <div class="row">
         <div class="col-md-6">
           <mat-form-field appearance="outline" id="txtFormElements">
@@ -51,14 +50,15 @@
         </div>
   <hr>
       <div class="Action"> 
+        <button mat-raised-button id="warnColor" (click)="closeDialog()" class="float-end p-3">
+          <mat-icon>cancel</mat-icon>
+          Cancel
+      </button>
         <button mat-raised-button id="primaryColor" [disabled]="!rejectReasonForm.valid" (click)="addUpdateRejection()" class="float-end p-3">
             <mat-icon>add</mat-icon>
-            {{this.data.Action}} And Continue
+            Save and Continue
         </button>
-        <button mat-raised-button id="warnColor" (click)="closeDialog()" class="float-end p-3">
-            <mat-icon>cancel</mat-icon>
-            Cancel
-        </button>
+       
    </div>
     </form>
   </div>
