--- a/src/app/customers/customer-on-boarding/customer-on-boarding.component.html
+++ b/src/app/customers/customer-on-boarding/customer-on-boarding.component.html
@@ -2,16 +2,19 @@
 <!-- <mat-card class="m-2"> -->
 <div class="container">
     <div class="card shadow mt-2">
-        <div class="card-header">
-            <h1 class="mt-2">Customer On-Boarding </h1>
+        <div class="card-header" style="height:60px;">
+            <h2 class="mt-1" id="roles-heading" >
+                <mat-icon mat-list-icon>person_check</mat-icon>
+                &nbsp;Customer On-Boarding
+            </h2>
         </div>
-        <mat-stepper #stepper>
+        <mat-stepper #stepper (selectionChange)="onTabClicked($event)">
             <mat-step  errorMessage="Name is required." >
             <form >
                 <ng-template matStepLabel>Customer</ng-template>
                 <div class="row">
                     <div class="col-md-12">
-                    <button mat-raised-button id="primaryColor" (click)="addAction('ADD',null,'Customer')" class="float-end">
+                    <button mat-raised-button id="primaryColor" (click)="addAction('Add',null,'Customer')" class="float-end">
                         <mat-icon>add_circle</mat-icon>
                         Add New
                     </button>
@@ -98,9 +101,16 @@
             <mat-step  errorMessage="Address is required.">
                 <form >
                 <ng-template matStepLabel>Users</ng-template>  
+                <button class="toggle-button"  [ngClass]="{ active: isActive }" (click)="toggleButton()" matTooltip="{{ isActive ? 'Click to Search by Users' : 'Click to Search by User Groups' }}">
+                    <span class="button-label">Group Users {{ isActive ? 'Yes' : 'No' }}</span>
+                </button>
                 <div class="row">
                     <div class="col-md-12">
-                        <app-asign-unasign-items [items]="dataSource" (selectedItemsChanged)="onSelectedItemsChanged($event)"></app-asign-unasign-items>
+                        <app-asign-unasign-items 
+                        [items]="dataSource" 
+                        (selectedItemsChanged)="onSelectedItemsChanged($event)"
+                        >
+                    </app-asign-unasign-items>
                     </div>
                 </div>  
                 <hr>
@@ -116,30 +126,13 @@
                 <ng-template matStepLabel>Reasons</ng-template>
                 <div class="row">
                     <div class="col-md-12">
-                        <mat-form-field appearance="outline" id="txtFormElements">
-                            <mat-label>Select Rejection Code</mat-label>
-                            <mat-select 
-                            name="customerId"
-                            required
-                            >
-                            <mat-option value='{{data.rejectCode}}' *ngFor="let data of reasonList">{{data.rejectCode}}</mat-option>
-                            </mat-select>
-                    </mat-form-field>
+                        <app-asign-unasign-items 
+                        [items]="dataSource" 
+                        (selectedItemsChanged)="onSelectedItemsChanged($event)"
+                        >
+                    </app-asign-unasign-items>
                     </div>
-                </div>  
-                <div class="row">
-                    <div class="col-md-12">
-                        <mat-form-field appearance="outline" id="txtFormElements">
-                            <mat-label>Select Reason</mat-label>
-                            <mat-select 
-                            name="customerId"
-                            required
-                            >
-                            <mat-option value='{{data.reason}}' *ngFor="let data of reasonList">{{data.reason}}</mat-option>
-                            </mat-select>
-                    </mat-form-field>
-                    </div>
-                </div> 
+                </div>   
                 <hr> 
                 <div class="float-end">
                     <button mat-raised-button matStepperPrevious id="warnColor">Back</button>
@@ -170,31 +163,7 @@
                     <button mat-raised-button id="primaryColor" matStepperNext class="ms-2">Next</button>
                     </div>
                 </form>
-                </mat-step>
-
-                <mat-step  errorMessage="Address is required.">
-                    <form>
-                        <ng-template matStepLabel>Library</ng-template>                  
-                        <div class="row">
-                            <div class="col-md-12">
-                                <mat-form-field appearance="outline" id="txtFormElements">
-                                    <mat-label>Field Library</mat-label>
-                                    <mat-select 
-                                    name="customerId"
-                                    required
-                                    >
-                                    <mat-option value='{{data.projectName}}' *ngFor="let data of projectList">{{data.projectName}}</mat-option>
-                                    </mat-select>
-                            </mat-form-field>
-                            </div>
-                        </div>  
-                        <hr> 
-                        <div class="float-end">
-                        <button mat-raised-button matStepperPrevious id="warnColor">Back</button>
-                        <button mat-raised-button id="primaryColor" matStepperNext class="ms-2">Next</button>
-                        </div>
-                    </form>
-                    </mat-step>
+            </mat-step>
 
             <mat-step  errorMessage="Address is required.">
                 <form >
@@ -234,6 +203,30 @@
                 </div>
                 </form>
             </mat-step>
+
+            <mat-step  errorMessage="Address is required.">
+                <form>
+                    <ng-template matStepLabel>Library</ng-template>                  
+                    <div class="row">
+                        <div class="col-md-12">
+                            <mat-form-field appearance="outline" id="txtFormElements">
+                                <mat-label>Field Library</mat-label>
+                                <mat-select 
+                                name="customerId"
+                                required
+                                >
+                                <mat-option value='{{data.projectName}}' *ngFor="let data of projectList">{{data.projectName}}</mat-option>
+                                </mat-select>
+                        </mat-form-field>
+                        </div>
+                    </div>  
+                    <hr> 
+                    <div class="float-end">
+                    <button mat-raised-button matStepperPrevious id="warnColor">Back</button>
+                    <button mat-raised-button id="primaryColor" matStepperNext class="ms-2">Next</button>
+                    </div>
+                </form>
+                </mat-step>
 
             <mat-step>
             <ng-template matStepLabel>Done</ng-template>
