--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,13 +2,15 @@
     <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button> -->
-    <!-- <img src="assets/images/logo.png" width="100" class="img-thumbnail img-fluid"> -->
-    <span>FlexiCapture</span>
+    <div class="logo" style="width:180px;">
+    <img src="assets/images/LOGO.png" alt="Logo" class="img-fluid">
+    </div>
+    <!-- <span>FlexiCapture</span> -->
     <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <!-- <mat-icon>favorite</mat-icon> -->
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <!-- <mat-icon>share</mat-icon> -->
+    <!-- <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <mat-icon>favorite</mat-icon>
+    </button> -->
+    <button mat-mini-fab color="" class="example-icon" style="background-color:lightgray;" >
+      <mat-icon>manage_accounts</mat-icon>
     </button>
   </mat-toolbar>
