--- a/src/app/ocr-engines/add-edit-ocr-engine/add-edit-ocr-engine.component.html
+++ b/src/app/ocr-engines/add-edit-ocr-engine/add-edit-ocr-engine.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid mt-3">
     <form [formGroup]="OCREngineForm">
       <div class="p-2">
-        <h1>{{this.data.Action}} OCR-ENGINE</h1><hr>
+        <h1>{{this.data.Action}} OCR-Engine</h1><hr>
     </div>
 
     <div class="row">
@@ -56,14 +56,15 @@
         </div>
   <hr>
       <div class="Action"> 
+        <button mat-raised-button id="warnColor" (click)="closeDialog()" class="float-end p-3">
+          <mat-icon>cancel</mat-icon>
+          Cancel
+      </button>
         <button mat-raised-button id="primaryColor" [disabled]="!OCREngineForm.valid" (click)="addUpdateOCREngine()" class="float-end p-3">
             <mat-icon>add</mat-icon>
-            {{this.data.Action}} And Continue
+            Save and Continue
         </button>
-        <button mat-raised-button id="warnColor" (click)="closeDialog()" class="float-end p-3">
-            <mat-icon>cancel</mat-icon>
-            Cancel
-        </button>
+        
    </div>
     </form>
   </div>
