--- a/src/app/page-types/view-pages-type-list/view-pages-type-list.component.html
+++ b/src/app/page-types/view-pages-type-list/view-pages-type-list.component.html
@@ -1,15 +1,18 @@
 <div class="container mt-2">
     <div class="card shadow">
-        <div class="card-header position-relative">
-            <h1 class="mt-2">Page-Types</h1>
-            <div class="button-container mt-2 me-2 position-absolute top-0 end-0">
+        <div class="card-header position-relative" style="height:60px;">
+            <h2 class="mt-1" id="roles-heading">
+                <mat-icon mat-list-icon>note_alt</mat-icon>
+                &nbsp;Page-Type
+            </h2>
+            <div class="button-container mt-1 me-2 position-absolute top-0 end-0">
+                <button mat-raised-button id="primaryColor" (click)="pageTypeAction('Add',null)" class="">
+                    <mat-icon>add_circle</mat-icon>
+                    Add New 
+                </button>
                 <button mat-raised-button id="warnColor" class="">
                     <mat-icon>do_not_disturb_on</mat-icon>
                     Delete
-                </button>
-                <button mat-raised-button id="primaryColor" (click)="pageTypeAction('ADD',null)" class="">
-                    <mat-icon>add_circle</mat-icon>
-                    Add New 
                 </button>
             </div>
         </div>
@@ -38,16 +41,16 @@
                 <ng-container matColumnDef="Action">
                     <th mat-header-cell *matHeaderCellDef> Action </th>
                     <td mat-cell *matCellDef="let element" style="width:15%;">
-                        <mat-icon color="" style="color:black;" (click)="pageTypeAction('EDIT',element)">edit</mat-icon>
-                        <mat-icon color="" style="color:black;" (click)="deletePageType(element.id)">delete</mat-icon>
+                        <mat-icon style="color:#1D4F91;" (click)="pageTypeAction('Edit',element)">edit</mat-icon>
+                        <mat-icon style="color:#FF7F32;" (click)="deletePageType(element.id)">delete</mat-icon>
                     </td>
                 </ng-container>
             
-                <tr mat-header-row *matHeaderRowDef="displayedColumns" id="custom-table"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;" id="custom-table"></tr>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns" style="height:35px;"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;" style="height:35px;"></tr>
                 </table>
             
-                <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                <mat-paginator [pageSizeOptions]="[10, 20,30]"
                             showFirstLastButtons
                             aria-label="Select page of periodic elements">
                 </mat-paginator>
