--- a/src/app/projects/add-edit-projects/add-edit-projects.component.html
+++ b/src/app/projects/add-edit-projects/add-edit-projects.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid mt-3">
     <form [formGroup]="projectForm">
       <div class="p-2">
-        <h1>{{this.data.Action}} PROJECT</h1><hr>
+        <h1>{{this.data.Action}} Project</h1><hr>
     </div>
 
     <div class="row">
@@ -59,14 +59,15 @@
         </div>
   <hr>
       <div class="Action"> 
+        <button mat-raised-button id="warnColor" (click)="closeDialog()" class="float-end p-3">
+          <mat-icon>cancel</mat-icon>
+          Cancel
+      </button>
         <button mat-raised-button id="primaryColor" [disabled]="!projectForm.valid" (click)="addUpdateProject()" class="float-end p-3">
             <mat-icon>add</mat-icon>
-            {{this.data.Action}} And Continue
+            Save and Continue
         </button>
-        <button mat-raised-button id="warnColor" (click)="closeDialog()" class="float-end p-3">
-            <mat-icon>cancel</mat-icon>
-            Cancel
-        </button>
+        
    </div>
     </form>
   </div>
