--- a/src/app/rejection-reason/view-rejection-reason-lists/view-rejection-reason-lists.component.html
+++ b/src/app/rejection-reason/view-rejection-reason-lists/view-rejection-reason-lists.component.html
@@ -1,16 +1,20 @@
 <div class="container mt-2">
     <div class="card shadow">
-        <div class="card-header position-relative">
-            <h1 class="mt-2">Rejections</h1>
-            <div class="button-container mt-2 me-2 position-absolute top-0 end-0">
+        <div class="card-header position-relative" style="height:60px;">
+            <h2 class="mt-1" id="roles-heading">
+                <mat-icon mat-list-icon>person_off</mat-icon>
+                &nbsp;Rejections
+            </h2>
+            <div class="button-container mt-1 me-2 position-absolute top-0 end-0">
+                <button mat-raised-button id="primaryColor" (click)="rejectReasonAction('Add',null)" class="">
+                    <mat-icon>add_circle</mat-icon>
+                    Add New
+                </button>
                 <button mat-raised-button id="warnColor" class="">
                     <mat-icon>do_not_disturb_on</mat-icon>
                     Delete
                 </button>
-                <button mat-raised-button id="primaryColor" (click)="rejectReasonAction('ADD',null)" class="">
-                    <mat-icon>add_circle</mat-icon>
-                    Add New
-                </button>
+                
             </div>
         </div>
         <div class="card-body">
@@ -38,16 +42,16 @@
                 <ng-container matColumnDef="Action">
                     <th mat-header-cell *matHeaderCellDef> Action </th>
                     <td mat-cell *matCellDef="let element" style="width:15%;">
-                        <mat-icon color="" style="color:black;" (click)="rejectReasonAction('EDIT',element)">edit</mat-icon>
-                        <mat-icon color="" style="color:black;" (click)="deleteRejectReason(element.id)">delete</mat-icon>
+                        <mat-icon style="color:#1D4F91;" (click)="rejectReasonAction('Edit',element)">edit</mat-icon>
+                        <mat-icon style="color:#FF7F32;" (click)="deleteRejectReason(element.id)">delete</mat-icon>
                     </td>
                 </ng-container>
             
-                <tr mat-header-row *matHeaderRowDef="displayedColumns" id="custom-table"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;" id="custom-table"></tr>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns" style="height:35px;"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;" style="height:35px;"></tr>
                 </table>
             
-                <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                <mat-paginator [pageSizeOptions]="[10, 20,30]"
                             showFirstLastButtons
                             aria-label="Select page of periodic elements">
                 </mat-paginator>
