--- a/src/app/users/view-user-list/view-user-list.component.css
+++ b/src/app/users/view-user-list/view-user-list.component.css
@@ -14,3 +14,10 @@
 td{
     color:#1D4F91;
 }
+
+#roles-heading {
+    display: flex;
+    align-items: center;
+    /* font-size:1.4vw; */
+  }
+  
