--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; 
+
+}
 
 #txtFormElements{
     width:100%;
@@ -16,8 +18,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin-top:10px ;
     margin-right: 5px;
 }
-
-
 
 #warnColor{
     background-color:#FF7F32;
@@ -34,5 +34,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     /* border-bottom: 2px solid #FF7F32 !important;  */
     border-bottom: 1px solid #1D4F91;
   }
+
 
 
