--- a/src/app/customers/asign-unasign-items/asign-unasign-items.component.css
+++ b/src/app/customers/asign-unasign-items/asign-unasign-items.component.css
@@ -10,16 +10,25 @@
     width: 45%;
     max-height: 300px;
     overflow-y: auto;
+
+  }
+  .item-box{
+    min-width:500px;
   }
 
-  .selected-box {
-    background-color: #f3f3f3;
-  }
+ 
   .customAlert{
-    border:solid 1px #93b7e4;
-    padding:5px;
+    /* border:solid 1px #93b7e4; */
+    background-color: rgb(236, 236, 236);
+    padding:10px;
     margin-bottom:5px;
     border-radius:3px;
+    color:#002855
+  }
+
+  .customAlert:hover{
+    background-color: rgb(239, 239, 239);
+    
   }
 
   .input-container {
@@ -45,6 +54,21 @@
     margin-top: 10px; /* Adjust the margin as needed */
     height:50%
   }
+
+  .icon-button-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 12%;
+  }
+
+ 
+
+
+
+
+  
 
 
   
