--- a/src/app/customers/asign-unasign-items/asign-unasign-items.component.html
+++ b/src/app/customers/asign-unasign-items/asign-unasign-items.component.html
@@ -1,56 +1,69 @@
- 
 <div class="container mt-1">
-      <div class="card item-box">
-            <div class="card-header">
-              <div class="input-container">
-              <input type="text" [(ngModel)]="searchText"  placeholder="search unassigned {{customText}}" class="form-control" >
-              <div class="checkbox-container" >
-                <mat-checkbox [(ngModel)]="selectAll" (change)="toggleSelectAll()" matTooltip="Select All"></mat-checkbox>
-              </div>
-            </div>
-          </div>
-          <div class="card-body">
-           
-            <div *ngIf="items.length > 0; else noItemsFound">
-                <div *ngFor="let item of items | filterPipe: searchText" >
-                  <div class="customAlert">
-                      <label>
-                      <input type="checkbox" [checked]="item.selected" (change)="toggleItemSelection(item)" />
-                      {{getKeyUnSelected(item)}}
-                      </label>
-                  </div>
-                </div>
-            </div>
-            <ng-template #noItemsFound>
-              <div class="alert alert-info">
-                <label>
-                  No Group User Found
-                </label>
-              </div>
-            </ng-template>
-          </div>
-      </div>
-
-      <div class="center-icons" style="margin-top:12%;">
-        <button mat-fab id="primaryColor"  class="icon-button" (click)="asignUnAsign()" >
-        <mat-icon>code</mat-icon>
-      </button>
-      </div>
-      <!-- <button class="icon-button"  (click)="unAsign()"><</button> -->
-
-    <div class="card selected-box">
-        <div class="card-header">
-          <label>Assigned {{customText}}</label>
+  <div class="card item-box">
+    <!-- List Box 1 -->
+    <div class="card-header">
+      <div class="input-container">
+        <input type="text" [(ngModel)]="searchTextUnAssigned" placeholder="Search Unassigned {{customText}}" class="form-control">
+        <div class="checkbox-container">
+          <mat-checkbox [(ngModel)]="selectAll" (change)="toggleSelectAllUnAssigned()" matTooltip="Select All" style="background-color: white;"></mat-checkbox>
         </div>
-        <div class="card-body">
-          <div *ngFor="let selectedItem of selectedItems">
-              <div class="customAlert">
-                {{getKeyForSelected(selectedItem)}}
-              </div>
-          </div>
-        </div>
+      </div>
     </div>
+    <div class="card-body" >
+      <div *ngIf="items.length > 0; else noItemsFound" >
+        <div *ngFor="let item of items | filterPipe: searchTextUnAssigned">
+          <div class="customAlert">
+            <label>
+              <input type="checkbox" [checked]="item.selected" (change)="toggleItemSelection(item)" class="me-1"/>
+              {{ getKeyUnSelected(item) }}
+            </label>
+          </div>
+        </div>
+      </div>
+      <ng-template #noItemsFound>
+        <div class="alert alert-info">
+          <label>
+            No Reord Found
+          </label>
+        </div>
+      </ng-template>
+    </div>
+  </div>
+
+  <div class="ms-2 me-1" style="margin-top: 10%;">
+    <div class="icon-button-wrapper">
+      <button mat-mini-fab id="primaryColor" class="icon-button" (click)="assignSelected()" matTooltip="Assign">
+        <mat-icon>chevron_right</mat-icon>
+      </button>
+    </div>
+    <div class="icon-button-wrapper">
+      <button mat-mini-fab id="warnColor" class="icon-button" (click)="unassignSelected()" matTooltip="UnAsign">
+        <mat-icon>chevron_left</mat-icon>
+      </button>
+    </div>
+  </div>
+
+  <!-- List Box 2 -->
+  <div class="card item-box">
+    <div class="card-header">
+      <div class="input-container">
+        <input type="text" [(ngModel)]="searchTextAssg" placeholder="Search Assigned {{customText}}" class="form-control">
+        <!-- <div class="checkbox-container">
+          <mat-checkbox [(ngModel)]="selectAll2" (change)="toggleSelectAll2()" matTooltip="Select All"></mat-checkbox>
+        </div> -->
+      </div>
+    </div>
+    <div class="card-body">
+      <div *ngFor="let selectedItem of selectedItems | filterPipe: searchTextAssg">
+        <div class="customAlert">
+          <label>
+            <input type="checkbox" [checked]="selectedItem.selected" (change)="toggleAssignedSelection(selectedItem)" />
+            {{ getKeyForSelected(selectedItem) }}
+          </label>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-  <!-- <div class="float-end mt-3">
-  <button mat-raised-button id="primaryColor" (click)="show()">Save and Assign</button>
-  </div> -->
+
+
