--- a/src/app/customers/customer-on-boarding/customer-on-boarding.component.css
+++ b/src/app/customers/customer-on-boarding/customer-on-boarding.component.css
@@ -20,10 +20,11 @@
   background-color: #e0e0e0;
   color: #333;
   border-radius: 20px;
-  padding: 5px 15px;
+  padding: 2px 5px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
   outline: none;
+  margin-left:15px;
 }
 
 .toggle-button.active {
@@ -34,3 +35,5 @@
 .button-label {
   margin-right: 5px;
 }
+
+
