--- a/src/app/customers/customer-on-boarding/customer-on-boarding.component.html
+++ b/src/app/customers/customer-on-boarding/customer-on-boarding.component.html
@@ -8,88 +8,80 @@
                 &nbsp;Customer On-Boarding
             </h2>
         </div>
-        <mat-stepper #stepper (selectionChange)="onTabClicked($event)">
-            <mat-step  errorMessage="Name is required." >
+        <mat-stepper #stepper  (selectionChange)="onTabClicked($event)" >
+            <mat-step  errorMessage="Customer." >
             <form >
-                <ng-template matStepLabel>Customer</ng-template>
-                <div class="row">
-                    <div class="col-md-12">
-                    <button mat-raised-button id="primaryColor" (click)="addAction('Add',null,'Customer')" class="float-end">
-                        <mat-icon>add_circle</mat-icon>
-                        Add New
-                    </button>
+                <ng-template matStepLabel >Customer</ng-template>
+                <div class="container"> 
+                    <div class="row">
+                        <div class="col-md-12">
+                          <mat-form-field appearance="outline" id="txtFormElements">
+                            <mat-label>Customer Name</mat-label>
+                            <input
+                              matInput
+                              placeholder="Enter Customer Name"
+                              name="customerName"
+                              required
+                            />
+                            <mat-icon matSuffix>edit</mat-icon>
+                          </mat-form-field>
+                  
+                        </div>
                     </div>
-                </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <mat-form-field appearance="outline" id="txtFormElements">
-                                <mat-label>Select Customer Code</mat-label>
-                                <mat-select 
-                                name="customerId"
-                                required
-                                >
-                                <mat-option value="{{data.customerCode}}" *ngFor="let data of customerList">{{data.customerCode}}</mat-option>
-                                </mat-select>
-                        </mat-form-field>
-                        </div>
-                    </div>  
-                    <div class="row">
-                        <div class="col-md-12">
-                            <mat-form-field appearance="outline" id="txtFormElements">
-                                <mat-label>Select Customer</mat-label>
-                                <mat-select 
-                                name="customerId"
-                                required
-                                >
-                                <mat-option value="{{data.customerCode}}" *ngFor="let data of customerList">{{data.customerName}}</mat-option>
-                                </mat-select>
-                        </mat-form-field>
-                        </div>
-                    </div>  
-                    <hr> 
+                          <mat-form-field appearance="outline" id="txtFormElements">
+                            <mat-label>Customer Code</mat-label>
+                            <input
+                              matInput
+                              placeholder="Enter Customer Code"
+                              name="customerCode"
+                              required
+                            />
+                            <mat-icon matSuffix>edit</mat-icon>
+                          </mat-form-field>
+                        </div> 
+                    </div> 
+                     
+                  </div>    
+                <hr> 
                 <div class="float-end">
-                <button mat-raised-button id="primaryColor" matStepperNext>Next</button>
+                    <button mat-raised-button id="primaryColor" matStepperNext>Save and Next</button>
                 </div>
             </form>
             </mat-step>
 
-            <mat-step  errorMessage="Address is required.">
+            <mat-step  errorMessage="Project.">
             <form>
-                <ng-template matStepLabel>Projects</ng-template>
+                <ng-template matStepLabel>Project</ng-template>
                 <div class="row">
                     <div class="col-md-12">
-                    <button mat-raised-button id="primaryColor" (click)="addAction('ADD',null,'Project')" class="float-end">
-                        <mat-icon>add_circle</mat-icon>
-                        Add New
-                    </button>
+                      <mat-form-field appearance="outline" id="txtFormElements">
+                        <mat-label>Project Code</mat-label>
+                        <input
+                          matInput
+                          placeholder="Enter Project Code"
+                          name="projectCode"
+                          required
+                        />
+                        <mat-icon matSuffix>edit</mat-icon>
+                      </mat-form-field>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <mat-form-field appearance="outline" id="txtFormElements" >
-                            <mat-label>Select Project Code</mat-label>
-                            <mat-select  
-                            name="customerId"
-                            required
-                            >
-                            <mat-option value='{{data.projectCode}}' *ngFor="let data of projectList">{{data.projectCode}}</mat-option>
-                            </mat-select>
-                    </mat-form-field>
-                    </div>
-                </div>  
-                <div class="row">
                     <div class="col-md-12">
                         <mat-form-field appearance="outline" id="txtFormElements">
-                            <mat-label>Select Project</mat-label>
-                            <mat-select 
-                            name="customerId"
+                          <mat-label>Project Name</mat-label>
+                          <input
+                            matInput
+                            placeholder="Enter Project Name"
+                            name="projectName"
                             required
-                            >
-                            <mat-option value='{{data.projectName}}' *ngFor="let data of projectList">{{data.projectName}}</mat-option>
-                            </mat-select>
-                    </mat-form-field>
+                          />
+                          <mat-icon matSuffix>edit</mat-icon>
+                        </mat-form-field>
                     </div>
-                </div>  
+                </div>
+                  
+                  
                 <hr> 
                 <div class="float-end">
                 <button mat-raised-button matStepperPrevious id="warnColor">Back</button>
@@ -98,12 +90,19 @@
             </form>
             </mat-step>
 
-            <mat-step  errorMessage="Address is required.">
+            <mat-step  errorMessage="User.">
                 <form >
-                <ng-template matStepLabel>Users</ng-template>  
-                <button class="toggle-button"  [ngClass]="{ active: isActive }" (click)="toggleButton()" matTooltip="{{ isActive ? 'Click to Search by Users' : 'Click to Search by User Groups' }}">
-                    <span class="button-label">Group Users {{ isActive ? 'Yes' : 'No' }}</span>
-                </button>
+                <ng-template matStepLabel>User</ng-template>  
+                <div class="row ms-2">
+                    <div class="col-md-12">
+                      <label class="radio-label">
+                        <input type="radio"  [(ngModel)]="selectedSearchType" (click)="onSearchTypeSelected('users')" [checked]="selectedSearchType === 'users'" value="users" name ="userSearch" />&nbsp;Users
+                      </label>
+                      <label class="radio-label">
+                        <input type="radio" class="ms-1" [(ngModel)]="selectedSearchType" (click)="onSearchTypeSelected('userGroups')" [checked]="selectedSearchType === 'userGroups'" value="userGroups"  name ="userSearch"/>&nbsp;Groups
+                      </label>
+                    </div>
+                  </div>
                 <div class="row">
                     <div class="col-md-12">
                         <app-asign-unasign-items 
@@ -121,7 +120,7 @@
                 </form>
             </mat-step>
 
-            <mat-step  errorMessage="Address is required.">
+            <mat-step  errorMessage="Reasons.">
                 <form >
                 <ng-template matStepLabel>Reasons</ng-template>
                 <div class="row">
@@ -141,20 +140,14 @@
                 </form>
             </mat-step>
 
-            <mat-step  errorMessage="Address is required.">
+            <mat-step  errorMessage="Queues.">
                 <form>
                     <ng-template matStepLabel>Queues</ng-template>
                     <div class="row">
                         <div class="col-md-12">
-                            <mat-form-field appearance="outline" id="txtFormElements" >
-                                <mat-label>Select Queues</mat-label>
-                                <mat-select  
-                                name="customerId"
-                                required
-                                >
-                                <mat-option value='{{data.projectCode}}' *ngFor="let data of projectList">{{data.projectCode}}</mat-option>
-                                </mat-select>
-                        </mat-form-field>
+                            <app-queues-on-board
+                            (queueData)="onSelectedQueueChanged($event)"
+                            ></app-queues-on-board>
                         </div>
                     </div>   
                     <hr> 
@@ -167,7 +160,7 @@
 
             <mat-step  errorMessage="Address is required.">
                 <form >
-                <ng-template matStepLabel>Page</ng-template>
+                <ng-template matStepLabel>Form</ng-template>
                 <div class="row">
                     <div class="col-md-12">
                         <mat-form-field appearance="outline" id="txtFormElements">
