--- a/src/app/customers/asign-unasign-items/asign-unasign-items.component.css
+++ b/src/app/customers/asign-unasign-items/asign-unasign-items.component.css
@@ -40,12 +40,13 @@
   .checkbox-container {
     position: absolute;
     top: 50%; 
-    right: 0;
+    left: 0;
     transform: translateY(-50%); 
   }
   .input-container input {
     /* padding-left: 40px; */
     width:90%;
+    margin-left:10%;
     border: none;
   }
   .center-icons {
