--- a/src/app/layout/side-nav/side-nav.component.html
+++ b/src/app/layout/side-nav/side-nav.component.html
@@ -45,14 +45,14 @@
       </mat-list-item>
       <mat-divider id="dividerColor"></mat-divider>
 
-      <mat-list-item  id="listItems" class="custom-menu-item">
+      <mat-list-item  [routerLink]="'/Queues'" routerLinkActive="active-link" id="listItems" class="custom-menu-item">
         <span class="menu-content">
           <mat-icon mat-list-icon id="iconColor" class="icon">format_list_numbered_rtl</mat-icon>
           <span class="menu-item" *ngIf="isExpanded"  class="menu-item">Queues</span>
         </span>
       </mat-list-item>
 
-      <mat-list-item  id="listItems" class="custom-menu-item">
+      <mat-list-item  id="listItems" [routerLink]="'/FieldLibrary'" routerLinkActive="active-link" class="custom-menu-item">
         <span class="menu-content">
           <mat-icon mat-list-icon id="iconColor">list_alt_add</mat-icon>
           <span  *ngIf="isExpanded" class="menu-item">Field Library</span>
