--- a/src/app/users/add-edit-user-dialog/add-edit-user-dialog.component.html
+++ b/src/app/users/add-edit-user-dialog/add-edit-user-dialog.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid mt-3 position-relative">
   <form [formGroup]="userForm">
-    <div class="p-2">
+    <div class="px-1">
       <h1>{{this.data.Action}} Users</h1><hr>
   </div>
-    <div class="row">
+    <div class="row g-1 no-gutter-row">
       <div class="col-md-6">
         <mat-form-field appearance="outline" id="txtFormElements">
           <mat-label>User Name</mat-label>
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row g-1 no-gutter-row">
       <div class="col-md-6">
         <mat-form-field appearance="outline" id="txtFormElements">
           <mat-label>First Name</mat-label>
@@ -62,7 +62,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row g-1 no-gutter-row">
       <div class="col-md-6">
         <mat-form-field appearance="outline" id="txtFormElements">
           <mat-label>Domain Name</mat-label>
@@ -91,7 +91,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row g-1 no-gutter-row">
       <div class="col-md-6">
         <mat-form-field appearance="outline" id="txtFormElements">
           <mat-label>Select Country Code</mat-label>
@@ -125,7 +125,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row g-1 no-gutter-row">
       <div class="col-md-6">
         <mat-form-field appearance="outline" id="txtFormElements">
           <mat-label>Time-Zone</mat-label>
@@ -156,7 +156,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row g-1 no-gutter-row">
       <div class="col-md-6">
         <mat-form-field appearance="outline" id="txtFormElements">
           <mat-label>Select Manager</mat-label>
@@ -191,7 +191,7 @@
  
     </div>
 
-    <div class="row">
+    <div class="row g-1 no-gutter-row">
       <div class="col-md-6">
         <mat-form-field appearance="outline" id="txtFormElements">
           <mat-label>Select Location Type</mat-label>
