--- a/src/app/customers/customer-on-boarding/customer-on-boarding.component.html
+++ b/src/app/customers/customer-on-boarding/customer-on-boarding.component.html
@@ -161,37 +161,14 @@
             <mat-step  errorMessage="Address is required.">
                 <form >
                 <ng-template matStepLabel>Form</ng-template>
-                <div class="row">
-                    <div class="col-md-12">
-                        <mat-form-field appearance="outline" id="txtFormElements">
-                            <mat-label>Select Page Code</mat-label>
-                            <mat-select 
-                            name="customerId"
-                            required
-                            >
-                            <mat-option value='{{data.pageTypeCode}}' *ngFor="let data of pageList">{{data.pageTypeCode}}</mat-option>
-                            </mat-select>
-                    </mat-form-field>
-                    </div>
-                </div>  
-                <div class="row">
-                    <div class="col-md-12">
-                        <mat-form-field appearance="outline" id="txtFormElements">
-                            <mat-label>Select Page Name</mat-label>
-                            <mat-select 
-                            name="customerId"
-                            required
-                            >
-                            <mat-option value='{{data.PageTypeName}}' *ngFor="let data of pageList">{{data.PageTypeName}}</mat-option>
-                            </mat-select>
-                    </mat-form-field>
-                    </div>
-                </div> 
+                <app-forms-onboard>
+
+                </app-forms-onboard>
                 <hr> 
                 <div class="float-end">
                     <button mat-raised-button  matStepperPrevious id="warnColor">Back</button>
                     <button mat-raised-button id="primaryColor" matStepperNext class="ms-2">
-                        Next   
+                        Save and Next   
                     </button>
                 </div>
                 </form>
