--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
     /* border-bottom: 2px solid #FF7F32 !important;  */
     border-bottom: 1px solid #1D4F91;
   }
+  .no-gutter-row {
+    margin-bottom: -19px;
+}
+
 
 
 
