--- a/src/app/customers/customer-on-boarding/customer-on-boarding.component.html
+++ b/src/app/customers/customer-on-boarding/customer-on-boarding.component.html
@@ -161,9 +161,11 @@
             <mat-step  errorMessage="Address is required.">
                 <form >
                 <ng-template matStepLabel>Form</ng-template>
-                <app-forms-onboard>
-
-                </app-forms-onboard>
+                <app-asign-unasign-items 
+                    [items]="dataSource" 
+                    (selectedItemsChanged)="onSelectedItemsChanged($event)"
+                    >
+                </app-asign-unasign-items>
                 <hr> 
                 <div class="float-end">
                     <button mat-raised-button  matStepperPrevious id="warnColor">Back</button>
