--- a/src/app/field-library/add-edit-field-library/add-edit-field-library.component.css
+++ b/src/app/field-library/add-edit-field-library/add-edit-field-library.component.css
@@ -35,7 +35,13 @@
     left: 50%;
     transform: translateX(-50%);
   }
+  
 
-
+ 
+   .custom-slider .ngx-slider .ngx-slider-pointer {
+  
+    background-color: #333 !important;
+  
+  }
 
   
